Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_ROI__c</fullName>
        <formula>AmountWonOpportunities   /  ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the return on investment for this Campaign?</inlineHelpText>
        <label>Campaign ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Tactic__c</fullName>
        <label>Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Lead__c</fullName>
        <formula>ActualCost  /  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Campaign_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Campaign</label>
        <referenceTo>data_sfga_camp__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>R00No0000000pc7lEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Offer__c</fullName>
        <label>Primary Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllChildCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ChildCampaign</value>
        </filters>
        <label>All Child Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllParentCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <columns>CAMPAIGN.TOT_CONTACTS</columns>
        <columns>TOT_AMOUNT_ALL</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ParentCampaign</value>
        </filters>
        <label>All Parent Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>ChildCampaign</fullName>
        <active>true</active>
        <label>Child Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ParentCampaign</fullName>
        <active>true</active>
        <label>Parent Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>